--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome To my 180Days of Habbit</h1>
+    <h1>M.Onur ATEŞ</h1><!-- Ad Soyad Başlığı-->
+    <h2>Hakkımda</h2>       <!-- Hakkımda Alt Başlığı-->
+    <p>'92 doğumlu ve eski bir Programcı. Yaşam boyu Girişimci.</p>
+    <H2>Sevdiğim Diziler</H2>
+    <ol>
+        <li>DARK</li>
+        <li>BLACK MIRROR</li>
+        <li>FRIENDS</li>
+        <li>HIMYM</li>
+        <li>SHERLOCK HOLMES</li>
+    </ol>
 </body>
 </html>
