--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="../firstrepoforkodluyoruz/style.css" rel="stylesheet" type="text-css" />
 </head>
-<body>
-    <h1>M.Onur ATEŞ</h1><!-- Ad Soyad Başlığı-->
+
+
+<hr>
+<div align="center">
+    <h1>M.Onur ATEŞ</h1>
+    <blockquote>"Bilgi güçtür ve bu güç mutlak galibiyet sağlar."</blockquote><hr/>
+</div>
+
+    
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn4.iconfinder.com%2Fdata%2Ficons%2Fprofession-avatar-5%2F64%2F29-programmer-512.png&f=1&nofb=1" alt="Profil Fotoğrafı" title="Coder Vector Avatar" width="250px" height="250px"><!-- Ad Soyad Başlığı-->
     <h2>Hakkımda</h2>       <!-- Hakkımda Alt Başlığı-->
     <p>'92 doğumlu ve eski bir Programcı. Yaşam boyu Girişimci.</p>
     <H2>Sevdiğim Diziler</H2>
