Ordered List eklendi

--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
         <li>HIMYM</li>
         <li>SHERLOCK HOLMES</li>
     </ol>
+
+    <ol>
+        <li>Simyacı</li>
+        <li>Hemen her şeyin geleceği</li>
+        <li>Pür dikkat</li>
+        <li>Zengin Baba Yoksul Baba</li>
+        <li>Kardeşimin Hikayesi</li>
+    </ol>
 </body>
 </html>
