--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -39,7 +39,7 @@
         </section>
         <div class="p-2 flex-shrink-1 bd-highlight shadow p-3 mb-5 bg-white rounded">  
             <div class="card" style="width: 18rem;">
-                <img src="..//profile2.png" class="card-img-top" alt="...">
+                <img src="profile2.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title ">Hakkımda</h5>
                   <p class="card-text ">Sürekli öğrenim ve gelişime açık, problem çözmeyi sever ve bilginin güç olduğuna inanırım.</p>
