--- a/CV/index.html
+++ b/CV/index.html
@@ -10,7 +10,7 @@
   <body>
     <main class="d-flex bd-highlight">
         <section class="p-2 w-100 bd-highlight">
-            <article class="d-flex flex-column bd-highlight mb-3 bd-highlight shadow p-3 mb-5 bg-white rounded">
+            <article class="d-flex flex-column bd-highlight mb-3 bd-highlight shadow p-3 mb-5 bg-white rounded px-md-5">
                 <div class="jumbotron ">
                     <h1 class="display-4">M. ONUR ATEŞ</h1>
                     <p class="lead "></p><i class="bi bi-terminal-x"> JR.DEVELOPER</i>
@@ -30,14 +30,13 @@
                 </div>
                 <div class="p-2 bd-highlight border "><p class="h3">Uzmanlıklar</p>
                     <div class="progress">
-                   
                       </div>
 
 
                 </div>
               </article>
         </section>
-        <div class="p-2 flex-shrink-1 bd-highlight shadow p-3 mb-5 bg-white rounded">  
+        <div class="p-2 flex-shrink-1 bd-highlight shadow p-3 mb-5 bg-white rounded px-md-3">  
             <div class="card" style="width: 18rem;">
                 <img src="profile2.png" class="card-img-top" alt="...">
                 <div class="card-body">
